[gd_scene load_steps=12 format=2]

[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Environment/EnvironmentInherited.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objectives/Hay/Haybale.tscn" type="PackedScene" id=3]
[ext_resource path="res://MainMenu/CameraPivot.gd" type="Script" id=4]

[sub_resource type="Animation" id=15]
resource_name = "Damaged"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Mesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 0.25, 1, 1, 1, 1, 1.03526, 1.03526, 1.03526, 1.03526 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0.25 ), Vector3( 0, 0, -0.25 ), Vector3( 0, 0, 0.2 ), Vector3( 0, 0, -0.2 ), Vector3( 0, 0, 0.1 ), Vector3( 0, 0, -0.1 ), Vector3( 0, 0, 0.05 ), Vector3( 0, 0, -0.05 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "Damaged"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Mesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 0.25, 1, 1, 1, 1, 1.03526, 1.03526, 1.03526, 1.03526 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0.25 ), Vector3( 0, 0, -0.25 ), Vector3( 0, 0, 0.2 ), Vector3( 0, 0, -0.2 ), Vector3( 0, 0, 0.1 ), Vector3( 0, 0, -0.1 ), Vector3( 0, 0, 0.05 ), Vector3( 0, 0, -0.05 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "Damaged"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Mesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 0.25, 1, 1, 1, 1, 1.03526, 1.03526, 1.03526, 1.03526 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0.25 ), Vector3( 0, 0, -0.25 ), Vector3( 0, 0, 0.2 ), Vector3( 0, 0, -0.2 ), Vector3( 0, 0, 0.1 ), Vector3( 0, 0, -0.1 ), Vector3( 0, 0, 0.05 ), Vector3( 0, 0, -0.05 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "Damaged"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Mesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 0.25, 1, 1, 1, 1, 1.03526, 1.03526, 1.03526, 1.03526 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0.25 ), Vector3( 0, 0, -0.25 ), Vector3( 0, 0, 0.2 ), Vector3( 0, 0, -0.2 ), Vector3( 0, 0, 0.1 ), Vector3( 0, 0, -0.1 ), Vector3( 0, 0, 0.05 ), Vector3( 0, 0, -0.05 ) ]
}

[sub_resource type="ProceduralSky" id=12]
sky_top_color = Color( 0.996078, 0.788235, 0.788235, 1 )
sky_horizon_color = Color( 0.396078, 0.392157, 0.392157, 1 )
sky_energy = 0.5
sun_color = Color( 0.568627, 0.105882, 0.105882, 1 )

[sub_resource type="Environment" id=13]
background_mode = 2
background_sky = SubResource( 12 )
ambient_light_color = Color( 0.741176, 0.741176, 0.741176, 1 )
fog_enabled = true
fog_color = Color( 0.501961, 0.6, 0.701961, 1 )
fog_depth_end = 20.0
dof_blur_far_distance = 13.6
dof_blur_far_transition = 1.69
dof_blur_far_amount = 0.08
dof_blur_far_quality = 0
glow_enabled = true

[sub_resource type="Curve3D" id=14]
_data = {
"points": PoolVector3Array(  ),
"tilts": PoolRealArray(  )
}

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="CameraPivot" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 2.63397, 3.09808 )
current = true

[node name="Environment" parent="." instance=ExtResource( 2 )]

[node name="Haybale" parent="Environment" instance=ExtResource( 3 )]
transform = Transform( 0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 2.26795, 0, 4 )

[node name="AnimationPlayer" parent="Environment/Haybale" index="2"]
anims/Damaged = SubResource( 15 )

[node name="Healthbar" parent="Environment/Haybale" index="3"]
visible = false

[node name="Haybale2" parent="Environment" instance=ExtResource( 3 )]
transform = Transform( 0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, -4.36055, 0, -2.27646 )

[node name="AnimationPlayer" parent="Environment/Haybale2" index="2"]
anims/Damaged = SubResource( 16 )

[node name="Healthbar" parent="Environment/Haybale2" index="3"]
visible = false

[node name="Haybale3" parent="Environment" instance=ExtResource( 3 )]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 2.14211, 0, -1.70805 )

[node name="AnimationPlayer" parent="Environment/Haybale3" index="2"]
anims/Damaged = SubResource( 17 )

[node name="Healthbar" parent="Environment/Haybale3" index="3"]
visible = false

[node name="Haybale4" parent="Environment" instance=ExtResource( 3 )]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, -2.14872, 0, 3.58278 )

[node name="AnimationPlayer" parent="Environment/Haybale4" index="2"]
anims/Damaged = SubResource( 18 )

[node name="Healthbar" parent="Environment/Haybale4" index="3"]
visible = false

[node name="Menu" type="CanvasLayer" parent="."]

[node name="MenuVBox" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -20.0
margin_right = 72.0
margin_bottom = 20.0

[node name="Title" type="Label" parent="Menu/MenuVBox"]
margin_right = 144.0
margin_bottom = 14.0
text = "PROTECT THE HARVEST"
align = 1
valign = 1

[node name="Highscore" type="Label" parent="Menu/MenuVBox"]
margin_top = 18.0
margin_right = 144.0
margin_bottom = 32.0
text = "HIGHSCORE: 0.0"
align = 1
valign = 1

[node name="Start" type="Button" parent="Menu/MenuVBox"]
margin_top = 36.0
margin_right = 144.0
margin_bottom = 56.0
text = "START"

[node name="Quit" type="Button" parent="Menu/MenuVBox"]
margin_top = 60.0
margin_right = 144.0
margin_bottom = 80.0
text = "QUIT"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 13 )

[node name="Path" type="Path" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
curve = SubResource( 14 )

[connection signal="pressed" from="Menu/MenuVBox/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/MenuVBox/Quit" to="." method="_on_Quit_pressed"]

[editable path="Environment/Haybale"]
[editable path="Environment/Haybale2"]
[editable path="Environment/Haybale3"]
[editable path="Environment/Haybale4"]
